Bug 78267 - Slideshow: does not go to next slide or animation by mouse click
Summary: Slideshow: does not go to next slide or animation by mouse click
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: x86 (IA32) Windows (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords: bibisected, regression
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2014-05-04 23:00 UTC by Regina Henschel
Modified: 2015-12-17 08:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Presentation to test mouse click (157.77 KB, application/vnd.oasis.opendocument.presentation)
2014-05-04 23:00 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2014-05-04 23:00:14 UTC
Created attachment 98432 [details]
Presentation to test mouse click

I've got Version: 4.3.0.0.alpha1+
Build ID: f76026a43acc65465882924796d93e635c35fd90
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-04_06:34:33
When I open attached presentation and start slideshow, it does not react on mouse click. Expected behavior: Goes to next animation and to next slide on mouse click.
Comment 1 tommy27 2014-05-05 18:00:55 UTC
reproducible under Win7x64 using Version: 4.3.0.0.alpha1+
Build ID: f76026a43acc65465882924796d93e635c35fd90
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-04_06:34:33

status NEW
added to mab4.3 list.
Comment 2 Thorsten Behrens (allotropia) 2014-05-06 03:24:41 UTC
There was some large-scale change in vcl with some fallout recently, any chance to find an earlier daily build where this still works? My local copy from mid-April does at least.
Comment 3 Regina Henschel 2014-05-07 21:24:12 UTC
I see the error already in
Version: 4.3.0.0.alpha1+
Build ID: 145f2e970f46a3a3e5456b122d71f17c3abe878f
TinderBox: Win-x86@42, Branch:master, Time: 2014-04-26_23:32:36
Comment 4 Jan Holesovsky 2014-05-09 11:52:16 UTC
Caused by this:
 b45a12c37d2b671e54404afda5dee1b0947bd3ed is the first bad commit
commit b45a12c37d2b671e54404afda5dee1b0947bd3ed
Author: Noel Grandin <noel@peralex.com>
Date:   Thu Apr 24 10:52:02 2014 +0200

    sd: sal_Bool->bool
    
    Change-Id: I3172a42f6b6abe434ffe0475d1201ff50b6c06ea

:040000 040000 11a760060bd5be4071865225262a1816838df0c6 ec2c7a06e567859304a4531c3f817d41a50cc69c M	sd


Working on a fix now.
Comment 5 Commit Notification 2014-05-09 20:30:04 UTC
Jan Holesovsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dd484af7cfb472a39c9afebc6dad9ea28d1224c4

fdo#78267: Fix advancing slides by mouse clicks.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Robinson Tryon (qubit) 2015-12-17 08:00:52 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]