fdo#78267: Fix advancing slides by mouse clicks.

Fixes a regression from b45a12c37d2b671e54404afda5dee1b0947bd3ed.

The confusing logical operation

  ! (maPresSettings.mbLockedPages != sal_False)

should translate to

  !maPresSettings.mbLockPages

Change-Id: Iaba62ee001dd57194c1a17421d8632330eab1345